# design-patterns

./: .gitignore  CMakeLists.txt  ChainOfResponsibility.gliffy  Command.gliffy  chain_of_responsibility.cpp  mediator.cpp  memento.cpp  proxy.cpp
